--- a/views/events/404.hbs
+++ b/views/events/404.hbs
@@ -1,3 +1,6 @@
 <h2>Sorry!</h2>
 <p>We couldn't find that {{error}}</p>
 <p><a href="/events">Click here to browse all upcoming events</a></p>
+
+<meta name="bg-name" content="{{event.image_name}}">
+<script src="/js/set-tour-bg.js"></script>
