--- a/views/events/waiting-list-signup.hbs
+++ b/views/events/waiting-list-signup.hbs
@@ -89,5 +89,7 @@
     </form>
 </main>
 
+<meta name="bg-name" content="{{event.image_name}}">
 
+<script src="/js/set-tour-bg.js"></script>
 <script src="/js/wl-signup.js" type="module"></script>
