--- a/views/layouts/main-logged-in.hbs
+++ b/views/layouts/main-logged-in.hbs
@@ -1,11 +1,12 @@
 <!DOCtyPE html>
 <html lang="en">
 <head>
+    <title>Tickety Boo</title>
+
     {{{_sections.head}}}
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    {{!-- <title>Tickets</title> --}}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="/styles.css" />
 
@@ -24,7 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </head>
-<body>
+<body class="d-flex flex-column">
 <header class=" position-relative z-2000">
     {{> nav-logged-in}}
 </header>
