--- a/public/views/no-tickets.hbs
+++ b/public/views/no-tickets.hbs
@@ -3,5 +3,5 @@
 <form action="/events/tour/{{tour_id}}/waiting-list" method="get" class="d-block text-center">
     <input name="venue" value="{{venue_id}}" hidden>
     <input name="dates" type="text" id="waiting-list-dates" value="{{date_value}}" hidden>
-    <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
+    <button class="btn btn-black col-4 m-auto">Waiting List</button>
 </form>
