--- a/views/partials/city-cards.hbs
+++ b/views/partials/city-cards.hbs
@@ -1,6 +1,6 @@
 {{#each cardContext.venues}}
     <div 
-        class="city-card card mx-auto my-2" 
+        class="city-card card mx-auto my-2 bg-black text-white" 
         data-tour-id="{{../cardContext.event.tour_id}}"
         data-venue-id="{{this.venue_id}}"
         {{!-- onclick="location.href='{{addVenueIDToUrl ../cardContext.cardUrl this.venue_id}}'" --}}
