--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark position-relative" style="z-index: 2000">
     <div class="container-fluid">
-        <a href="/" class="navbar-header navbar-brand">Tickets</a>
+        <a href="/" class="navbar-header navbar-brand pt-0">Tickety Boo</a>
         <ul class="navbar-nav">
             <li class="nav-item"><a href="/events" class="nav-link">Events</a></li>
             <li class="nav-item dropdown btn-group">
-                <a href="/account" class="nav-link">Account</a>
+                <a href="/account" class="nav-link pe-1">Account</a>
                 <button 
                     type="button" 
                     class="btn btn-dark dropdown-toggle dropdown-toggle-split" 
@@ -16,7 +16,8 @@
 
                 <ul class="dropdown-menu position-absolute">
                     {{#if user}}
-                        <li class="dropdown-item">Purchase History</li>
+                        <li class="dropdown-item"><a href="/account#order-history">Purchase History</a></li>
+                        <li class="dropdown-item"><a href="/account#waiting-list">Ticket Waiting Lists</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li>
                             <form method="POST" action="/account/logout?_method=DELETE">
@@ -35,6 +36,7 @@
                     {{/if}}
                 </ul>
             </li>
+            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
         </ul>
 
         <form action="/search" method="get" class="d-flex col-5">
